{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 92,
  "lineage": "8ad60f15-8e2a-ea7d-b18f-3e15f093cdda",
  "resources": [
    {
      "module": "module.EshtablishingPeering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "just_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0dd77dfdd0839d2ec",
            "peer_owner_id": "528519205020",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-03d109dd490565cd3",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "just_peer"
            },
            "tags_all": {
              "Name": "just_peer"
            },
            "vpc_id": "vpc-03283cb5276ef3f35"
          },
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.attachingIG",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "requester_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:internet-gateway/igw-0d7cf8ee6fc6810d5",
            "id": "igw-0d7cf8ee6fc6810d5",
            "owner_id": "528519205020",
            "tags": {
              "Name": "requester_igw"
            },
            "tags_all": {
              "Name": "requester_igw"
            },
            "vpc_id": "vpc-03283cb5276ef3f35"
          },
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b08bfc6ff7069aff",
            "arn": "arn:aws:ec2:ap-south-1:528519205020:instance/i-0e8006752c0441f44",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8006752c0441f44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfa9517e49ee8671",
            "private_dns": "ip-10-0-8-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.199",
            "public_ip": "13.233.53.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d46c0c2a513b4af8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01d6c4f9bdfd3206f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05853237a4d97b401",
            "tags": {
              "Name": "public_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "public_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "public_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "vpc_security_group_ids": [
              "sg-01d6c4f9bdfd3206f"
            ]
          },
          "dependencies": [
            "module.create_sg.aws_security_group.create_sg",
            "module.creating_Subnets.aws_subnet.create_subnet",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_ec2[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b08bfc6ff7069aff",
            "arn": "arn:aws:ec2:ap-south-1:528519205020:instance/i-0a5c6b3ab9baf2242",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5c6b3ab9baf2242",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01949233e95377d65",
            "private_dns": "ip-10-1-4-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.4.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-080f3f108aeb661c4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b754c81aa6175ddd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c08fc87e49d3aac6",
            "tags": {
              "Name": "private_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "private_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "private_inst",
              "Owner": "b8g2",
              "Purpose": "training"
            },
            "vpc_security_group_ids": [
              "sg-0b754c81aa6175ddd"
            ]
          },
          "dependencies": [
            "module.create_sg.aws_security_group.create_sg",
            "module.creating_Subnets.aws_subnet.create_subnet",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_sg[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:security-group/sg-01d6c4f9bdfd3206f",
            "description": "alowing only ssh to connect with ec2 and then connect to another ec2 which is in private vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d6c4f9bdfd3206f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "requester_sg",
            "name_prefix": "",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "requester_sg"
            },
            "tags_all": {
              "Name": "requester_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283cb5276ef3f35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_sg[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:security-group/sg-0b754c81aa6175ddd",
            "description": "alowing only ssh to connect with ec2 and then connect to another ec2 which is in private vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b754c81aa6175ddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "accepter_sg",
            "name_prefix": "",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "accepter_sg"
            },
            "tags_all": {
              "Name": "accepter_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d109dd490565cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.creating_RT_accepter",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "accepter_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:route-table/rtb-0cea7be40fda66fc1",
            "id": "rtb-0cea7be40fda66fc1",
            "owner_id": "528519205020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0dd77dfdd0839d2ec"
              }
            ],
            "tags": {
              "Name": "accepter_routetable"
            },
            "tags_all": {
              "Name": "accepter_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d109dd490565cd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EshtablishingPeering.aws_vpc_peering_connection.just_peer",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.creating_RT_requester",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "requester_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:route-table/rtb-0f81030f4b26915e5",
            "id": "rtb-0f81030f4b26915e5",
            "owner_id": "528519205020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7cf8ee6fc6810d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0dd77dfdd0839d2ec"
              }
            ],
            "tags": {
              "Name": "requester_routetable"
            },
            "tags_all": {
              "Name": "requester_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283cb5276ef3f35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EshtablishingPeering.aws_vpc_peering_connection.just_peer",
            "module.attachingIG.aws_internet_gateway.requester_igw",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.creating_Subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:subnet/subnet-05853237a4d97b401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05853237a4d97b401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-03283cb5276ef3f35"
          },
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.creating_Subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:subnet/subnet-0c08fc87e49d3aac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c08fc87e49d3aac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-03d109dd490565cd3"
          },
          "dependencies": [
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.creating_VPC[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:vpc/vpc-03283cb5276ef3f35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0f77ac5db1c1814f6",
            "default_route_table_id": "rtb-0ab961934e95de164",
            "default_security_group_id": "sg-07fa7ab30340a86c9",
            "dhcp_options_id": "dopt-043565f818b17c916",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03283cb5276ef3f35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab961934e95de164",
            "owner_id": "528519205020",
            "tags": {
              "Name": "requester_vpc"
            },
            "tags_all": {
              "Name": "requester_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.creating_VPC[1]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:528519205020:vpc/vpc-03d109dd490565cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/18",
            "default_network_acl_id": "acl-053b4375b37bc1641",
            "default_route_table_id": "rtb-07a4876639719b8a9",
            "default_security_group_id": "sg-0985bc0e98deeeb41",
            "dhcp_options_id": "dopt-043565f818b17c916",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d109dd490565cd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a4876639719b8a9",
            "owner_id": "528519205020",
            "tags": {
              "Name": "accepter_vpc"
            },
            "tags_all": {
              "Name": "accepter_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.privateSubnetAssociation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "accepter_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbfb10fdc6b5cc3",
            "route_table_id": "rtb-0cea7be40fda66fc1",
            "subnet_id": "subnet-0c08fc87e49d3aac6"
          },
          "dependencies": [
            "module.EshtablishingPeering.aws_vpc_peering_connection.just_peer",
            "module.creating_RT_accepter.aws_route_table.accepter_rt",
            "module.creating_Subnets.aws_subnet.create_subnet",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.publicSubnetAssociation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "requester_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075164404e3bb1908",
            "route_table_id": "rtb-0f81030f4b26915e5",
            "subnet_id": "subnet-05853237a4d97b401"
          },
          "dependencies": [
            "module.EshtablishingPeering.aws_vpc_peering_connection.just_peer",
            "module.attachingIG.aws_internet_gateway.requester_igw",
            "module.creating_RT_requester.aws_route_table.requester_rt",
            "module.creating_Subnets.aws_subnet.create_subnet",
            "module.creating_VPC.aws_vpc.create_vpc"
          ]
        }
      ]
    }
  ]
}